add smartphone display

--- a/views/mobile.erb
+++ b/views/mobile.erb
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>このページは表示できません</title>
+	<title>このページはPC用です - Keypod</title>
+	<link rel="stylesheet" href="/assets/css/mobile.css">
+	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 </head>
 <body>
-	<p>このサイトはPC用です。</p>
+	<p><img src="/assets/images/logo_accent.svg" alt="logo"></p>
+	<h1>Keypod</h1>
+	<h2>このサイトはPC専用です</h2>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84261059-12"></script>
