--- a/public/assets/css/index_session.css
+++ b/public/assets/css/index_session.css
@@ -125,6 +125,9 @@ header div:nth-child(2) i {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   padding: 64px 0 32px 0;
   background: #01111a;
   text-align: center;
