--- a/views/login.erb
+++ b/views/login.erb
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ログイン - Keypod</title>
 	<link rel="stylesheet" href="/assets/css/login.css">
+	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 </head>
 <body>
 
