fix index_session design

--- a/public/assets/css/index_session.css
+++ b/public/assets/css/index_session.css
@@ -60,6 +60,7 @@ header div:nth-child(2) i {
   flex-flow: row wrap;
   justify-content: flex-start;
   padding: 32px;
+  min-height: calc(100vh - 256px);
 }
 
 .card {
