--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   background: #011a27;
+  font-family: -apple-system, "Roboto", "Helvetica Neue", "Droid Sans",
+    "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "Meiryo", "メイリオ",
+    "Osaka", "MS PGothic", arial, sans-serif;
 }
 
 header {
