--- a/public/assets/css/workspace_create.css
+++ b/public/assets/css/workspace_create.css
@@ -48,8 +48,8 @@ textarea {
   border-bottom: 1px solid #999;
 }
 
-.form form input[type="text"]:focus + .separator,
-.form form input[type="password"]:focus + .separator {
+.form form input[type="text"]:focus+.separator,
+.form form input[type="password"]:focus+.separator {
   transform: scaleX(1) translateY(-2px);
   opacity: 1;
 }
@@ -94,6 +94,18 @@ body {
   justify-content: center;
   align-items: center;
   background: #011a27;
+  font-family: -apple-system,
+    "Roboto",
+    "Helvetica Neue",
+    "Droid Sans",
+    "ヒラギノ角ゴ ProN",
+    "Hiragino Kaku Gothic ProN",
+    "Meiryo",
+    "メイリオ",
+    "Osaka",
+    "MS PGothic",
+    arial,
+    sans-serif;
 }
 
 body a {
