fix indexx description

--- a/views/index.erb
+++ b/views/index.erb
@@ -37,9 +37,9 @@
 			</div>
 		</div>
 		<div class="description">
-			<h2>What's Keypad?</h2>
+			<h2>What's Keypod?</h2>
 			<p>
-				Keypadは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。<br>
+				Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。<br>
 				LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。<br>
 				自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。<br>
 				しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。<br>
