fix file uploader description

--- a/views/workspace.erb
+++ b/views/workspace.erb
@@ -252,7 +252,7 @@
 							</div>
 							<div>
 								<form action="/workspace/edit/<%= @workspace.url %>/<%= @workspace.keys.find_by(key: str).id %>" method="post" enctype="multipart/form-data">
-									<h2>音声ファイルを追加する</h2>
+									<h2>音声ファイルを追加する(MP3が推奨)</h2>
 									<br>
 									<label id="file_label_<%= str %>" class="file_label" for="file_<%= str %>">
 										<p class="file_label_in_text" style="margin: 0;">ファイルを選択する</p>
