--- a/views/mobile.erb
+++ b/views/mobile.erb
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>このページはPC用です - Keypod</title>
+	<title>Keypod</title>
 	<link rel="stylesheet" href="/assets/css/mobile.css">
 	<link rel="shortcut icon" href="/assets/images/favicon.ico">
+
 </head>
 <body>
 	<p><img src="/assets/images/logo_accent.svg" alt="logo"></p>
