--- a/views/index_session.erb
+++ b/views/index_session.erb
@@ -6,6 +6,7 @@
 	<title>ダッシュボード - Keypod</title>
 	<link rel="stylesheet" href="/assets/css/index_session.css">
 	<script src="https://kit.fontawesome.com/e04b7045d3.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 </head>
 <body>
@@ -28,7 +29,7 @@
 			</div>
 		</a>
 		<% @workspaces.each do |workspace| %>
-		<div class="card">
+		<div id="card_<%= workspace.id %>" class="card">
 			<div class="info">
 				<h1><%= workspace.name %></h1>
 				<small><%= User.find(workspace.user_id).name %></small>
@@ -37,10 +38,7 @@
 
 			<div class="buttons">
 				<a class="btn-a btn-square" href="/workspace/<%= workspace.url %>">開く</a>
-				<!-- <a href="/workspace/edit/<%= workspace.url %>">編集</a> -->
-				<form action="/workspace/delete/<%= workspace.id %>" method="post">
-					<input class="btn-input btn-square" type="submit" value="削除">
-				</form>
+				<a class="btn-a btn-square" onclick="forget(<%= workspace.id %>);">削除</a>
 			</div>
 		</div>
 		<% end %>
@@ -48,6 +46,21 @@
 	<footer>
 		<small>© 2020 Keypod by Kazuki Isogai.</small>
 	</footer>
+
+	<script>
+		function forget(i) {
+			$.ajax({
+				type: 'POST',
+				url: '/workspace/delete/' + i
+			})
+			.done(function() {
+				$('#card_' + i).remove();
+			})
+			.fail(function() {
+				alert('error');
+			});
+		};
+	</script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84261059-12"></script>
