--- a/views/mobile.erb
+++ b/views/mobile.erb
@@ -4,6 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Keypod</title>
+	<meta name="description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。それが、今あなたのみているサイト「Keypod」です。">
+	<meta property="og:url" content="https://keypod.net">
+	<meta property="og:title" content="ホーム - Keypod">
+	<meta property="og:type" content="website">
+	<meta property="og:description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。それが、今あなたのみているサイト「Keypod」です。">
+	<meta property="og:site_name" content="Keypod">
+	<meta property="og:image" content="/assets/images/ogp.png">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@i5so_">
 	<link rel="stylesheet" href="/assets/css/mobile.css">
 	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 
