--- a/views/signup.erb
+++ b/views/signup.erb
@@ -12,6 +12,7 @@
 	<meta property="og:site_name" content="Keypod">
 	<meta property="og:image" content="/assets/images/ogp.png">
 	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:image" content="/assets/images/ogp.png">
 	<meta name="twitter:site" content="@i5so_">
 	<link rel="stylesheet" href="/assets/css/login.css">
 	<link rel="shortcut icon" href="/assets/images/favicon.ico">
