--- a/views/index.erb
+++ b/views/index.erb
@@ -10,9 +10,9 @@
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。それが、今あなたのみているサイト「Keypod」です。">
 	<meta property="og:site_name" content="Keypod">
-	<meta property="og:image" content="/assets/images/ogp.png">
+	<meta property="og:image" content="https://keypod.net/assets/images/ogp.png">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="/assets/images/ogp.png">
+	<meta name="twitter:image" content="https://keypod.net/assets/images/ogp.png">
 	<meta name="twitter:site" content="@i5so_">
 	<link rel="stylesheet" href="/assets/css/index.css">
 	<script src="https://kit.fontawesome.com/e04b7045d3.js" crossorigin="anonymous"></script>
