add function that rename workspace

--- a/views/index_session.erb
+++ b/views/index_session.erb
@@ -38,6 +38,7 @@
 
 			<div class="buttons">
 				<a class="btn-a btn-square" href="/workspace/<%= workspace.url %>">開く</a>
+				<a class="btn-a btn-square" href="/workspace/meta/edit/<%= workspace.id %>">編集</a>
 				<a class="btn-a btn-square" onclick="forget(<%= workspace.id %>);">削除</a>
 			</div>
 		</div>
