--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ホーム - Keypod</title>
-	<meta name="description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。それが、今あなたのみているサイト「Keypod」です。">
+	<meta name="description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。自分の好きなタイミングでのクリップの再生を行うことができるため、DJや劇の効果音再生などに用いることができます。">
 	<meta property="og:url" content="https://keypod.net">
 	<meta property="og:title" content="ホーム - Keypod">
 	<meta property="og:type" content="website">
-	<meta property="og:description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。LaunchpadとはNovation社が開発した楽器で、8x8のキーがついています。自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。それが、今あなたのみているサイト「Keypod」です。">
+	<meta property="og:description" content="Keypodは一言で言うと、Web上でLaunchpadのような体験ができるアプリです。自分の好きなタイミングでのクリップの再生を行うことができるため、DJや劇の効果音再生などに用いることができます。">
 	<meta property="og:site_name" content="Keypod">
 	<meta property="og:image" content="https://keypod.net/assets/images/ogp.png">
 	<meta name="twitter:card" content="summary_large_image">
