--- a/views/workspace.erb
+++ b/views/workspace.erb
@@ -415,7 +415,11 @@
 
     <script>
 			window.onload = function(){
-				var count = new WebSocket('ws://' + window.location.host + "/websocket/<%= @workspace.id %>");
+				var pro = "wss:";
+				if (window.location.protocol == "http:") pro = "ws:";
+				var url = pro + "//" + window.location.host + "/websocket/<%= @workspace.id %>";
+				// var count = new WebSocket('ws://' + window.location.host + "/websocket/<%= @workspace.id %>");
+				var ws = new WebSocket(url);
 
 				// 接続が始まった時
 				count.onopen = function() { console.log("接続") };
